--- a/flight-booking-client/package.json
+++ b/flight-booking-client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/x-date-pickers": "^8.5.3",
+    "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
